src/objects/LogDepuracion__c.object
<CustomObject>
    <fields>
        <fullName>Aplicacion__c</fullName>
        <label>Aplicacion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputStream__c</fullName>
        <label>InputStream</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutputStream__c</fullName>
        <label>OutputStream</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>